--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ecommerce">
-        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".SearchListActivity"></activity>
+        <activity android:name=".TestActivity" />
         <activity android:name=".BottomNavActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
