--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/Theme.Ecommerce"
         android:usesCleartextTraffic="true">
         <activity android:name=".OrderActivity"></activity>
-        <activity android:name=".ProductDetailsActivity" />
+        <activity android:name=".ProductDetailsActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".SearchListActivity" />
         <activity android:name=".BottomNavActivity" />
         <activity android:name=".MainActivity">
